strip jar and basepath from base refs in WebAppClassLoader