@@ -152,19 +152,19 @@ public class ClassUtils {
 			}
 		}
 
-		if (url != null) {
-			String externalForm = url.toExternalForm();
-			if (externalForm.startsWith("jar:file:") && externalForm.contains("/../")) {
-				try { // normalize paths containing "/../" in resources in jars. These constructs are not resolved properly otherwise. (see https://github.com/ibissource/iaf/issues/2231)
-					URI uri = new URI(externalForm.substring(4)); // strip the jar: prefix
-					String normalizedResourceUrl = "jar:"+uri.normalize().toString();
-					if (log.isDebugEnabled()) log.debug("normalized url [{}] into [{}]", url, normalizedResourceUrl);
-					url = new URL(normalizedResourceUrl);
-				} catch (Exception e) {
-					log.warn("Could not normalize jar:file URL", e);
-				}
-			}
-		}
+//		if (url != null) {
+//			String externalForm = url.toExternalForm();
+//			if (externalForm.startsWith("jar:file:") && externalForm.contains("/../")) {
+//				try { // normalize paths containing "/../" in resources in jars. These constructs are not resolved properly otherwise. (see https://github.com/ibissource/iaf/issues/2231)
+//					URI uri = new URI(externalForm.substring(4)); // strip the jar: prefix
+//					String normalizedResourceUrl = "jar:"+uri.normalize().toString();
+//					if (log.isDebugEnabled()) log.debug("normalized url [{}] into [{}]", url, normalizedResourceUrl);
+//					url = new URL(normalizedResourceUrl);
+//				} catch (Exception e) {
+//					log.warn("Could not normalize jar:file URL", e);
+//				}
+//			}
+//		}
 
 		return url;
 	}
